--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -17,7 +17,7 @@
       {% unless site.title == "Workshop Title" or site.title == "" %}
       <h2>{{site.title}}</h1>
       {% endunless %}
-      <h2>{{page.venue}}</h2>
+<!--       <h2>{{page.venue}}</h2> -->
       <div class="row">
         <div class="col-md-6">
           {% if online == "true_public" %}
