--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -16,8 +16,13 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr><td>9:00 - 10:30</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets</a></td></tr>
+      <tr><td>10:30 - 11:00</td> <td>Break</td></tr>
+      <tr><td>11:00 - 12:30</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets</a></td></tr>
+	<tr><td>12:30 - 13:30</td> <td>Lunch</a></td></tr>
+      <tr><td>13:30 - 15:00 </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
+	<tr><td>15:00 - 15:30 </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">Break</a></td></tr>
+      <tr><td>15:30 - 16:30 </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
       <tr>
         <td>Afternoon</td>
         <td>
