--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -16,50 +16,27 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>9:00 - 10:30</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets</a></td></tr>
-      <tr><td>10:30 - 11:00</td> <td>Break</td></tr>
-      <tr><td>11:00 - 12:30</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets</a></td></tr>
-	<tr><td>12:30 - 13:30</td> <td>Lunch</a></td></tr>
-      <tr><td>13:30 - 15:00 </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
-	<tr><td>15:00 - 15:30 </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">Break</a></td></tr>
-      <tr><td>15:30 - 16:30 </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
-      <tr>
-        <td>Afternoon</td>
-        <td>
-          {% if site.flavor == "r" %}
-          <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R</a>
-          {% elsif site.flavor == "python" %}
-          <a href="https://datacarpentry.org/python-ecology-lesson/">Introduction to Python</a>
-          {% else %}
-          {% include warning-flavor.html %}
-          {% endif %}
-      </td></tr>
-      <tr> <td>Evening</td> <td>END</td> </tr>
+      <tr><td>9:00 - 10:30</td><td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets</a></td></tr>
+      <tr><td>10:30 - 11:00</td><td>Break</td></tr>
+      <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets</a></td></tr>
+	<tr><td>12:30 - 13:30</td><td>Lunch</a></td></tr>
+      <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
+	<tr><td>15:00 - 15:30</td><td>Break</td></tr>
+      <tr><td>15:30 - 16:25</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
+	<tr><td>16:25 - 16:30</td><td>Wrap-up</td></tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>Morning</td>
-        <td>
-          {% if site.flavor == "r" %}
-          <a href="https://datacarpentry.org/R-ecology-lesson/">Continuation of R: Data analysis and Visualization</a>
-          {% elsif site.flavor == "python" %}
-          <a href="https://datacarpentry.org/python-ecology-lesson/">Continuation of Python: Data analysis and Visualization</a>
-          {% else %}
-          {% include warning-flavor.html %}
-          {% endif %}
-        </td>
-      </tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
-      <tr>
-	<td>Evening</td>
-	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
-      <tr>
-	<td> </td>
-	<td> END </td>
-      </tr>
+	<tr><td>09:00 - 10:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisatio</a></td></tr>
+      <tr><td>10:30 - 11:00</td><td>Break</td></tr>
+      <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisatio</a></td></tr>
+	<tr><td>12:30 - 13:30</td><td>Lunch</a></td></tr>
+      <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisatio</a></td></tr>
+	<tr><td>15:00 - 15:30</td><td>Break</td></tr>
+      <tr><td>15:30 - 16:15</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisatio</a>></td></tr>
+	<tr><td>16:15 - 16:30</td><td>Wrap-up</td></tr>
     </table>
   </div>
 </div>
