--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -29,13 +29,13 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-	<tr><td>09:00 - 10:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisatio</a></td></tr>
+	<tr><td>09:00 - 10:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisation</a></td></tr>
       <tr><td>10:30 - 11:00</td><td>Break</td></tr>
-      <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisatio</a></td></tr>
+      <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisation</a></td></tr>
 	<tr><td>12:30 - 13:30</td><td>Lunch</a></td></tr>
-      <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisatio</a></td></tr>
+      <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisation</a></td></tr>
 	<tr><td>15:00 - 15:30</td><td>Break</td></tr>
-      <tr><td>15:30 - 16:15</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisatio</a>></td></tr>
+      <tr><td>15:30 - 16:15</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisation</a></td></tr>
 	<tr><td>16:15 - 16:25</td><td>Wrap-up</td></tr>
 	<tr><td>16:25 - 16:30</td><td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td></tr>
     </table>
