--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -19,7 +19,7 @@ The schedule for the different curricula are listed here:
       <tr><td>9:00 - 10:30</td><td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets</a></td></tr>
       <tr><td>10:30 - 11:00</td><td>Break</td></tr>
       <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets</a></td></tr>
-	<tr><td>12:30 - 13:30</td><td>Lunch</a></td></tr>
+	<tr><td>12:30 - 13:30</td><td>Lunch</td></tr>
       <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
 	<tr><td>15:00 - 15:30</td><td>Break</td></tr>
       <tr><td>15:30 - 16:25</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
@@ -32,7 +32,7 @@ The schedule for the different curricula are listed here:
 	<tr><td>09:00 - 10:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisation</a></td></tr>
       <tr><td>10:30 - 11:00</td><td>Break</td></tr>
       <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisation</a></td></tr>
-	<tr><td>12:30 - 13:30</td><td>Lunch</a></td></tr>
+	<tr><td>12:30 - 13:30</td><td>Lunch</td></tr>
       <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisation</a></td></tr>
 	<tr><td>15:00 - 15:30</td><td>Break</td></tr>
       <tr><td>15:30 - 16:15</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">R: Data analysis and Visualisation</a></td></tr>
