--- a/_includes/dc/syllabus.html
+++ b/_includes/dc/syllabus.html
@@ -34,7 +34,7 @@ The syllabus for the different curricula are listed here:
 
   {% if site.flavor == "r" %}
   <div class="col-md-6">
-    <h3 id="syllabus-ecology-r">Introduction to R</h3>
+    <h3 id="syllabus-ecology-r">Data Analysis and Visualisation in R</h3>
     <ul>
       <li><a href="https://datacarpentry.org/R-ecology-lesson/00-before-we-start.html">Overview of R and RStudio</a></li>
       <li><a href="https://datacarpentry.org/R-ecology-lesson/01-intro-to-r.html">Introduction to R</a></li>
@@ -65,13 +65,13 @@ The syllabus for the different curricula are listed here:
   </div>
   {% endif %}
   <div class="col-md-6">
-    <h3 id="syllabus-ecology-sql">Data Management with SQL</h3>
+<!--     <h3 id="syllabus-ecology-sql">Data Management with SQL</h3>
     <ul>
       <li><a href="https://datacarpentry.org/sql-ecology-lesson/00-sql-introduction/index.html">Introduction to SQL</a></li>
       <li><a href="https://datacarpentry.org/sql-ecology-lesson/01-sql-basic-queries/index.html">Basic Queries</a></li>
       <li><a href="https://datacarpentry.org/sql-ecology-lesson/02-sql-aggregation/index.html">SQL Aggregation and Aliases</a></li>
       <li><a href="https://datacarpentry.org/sql-ecology-lesson/03-sql-joins/index.html">Joins</a></li>
-    </ul>
+    </ul> -->
   </div>
 </div>
 
