--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -20,9 +20,9 @@ The schedule for the different curricula are listed here:
       <tr><td>10:30 - 11:00</td><td>Break</td></tr>
       <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets</a></td></tr>
 	<tr><td>12:30 - 13:30</td><td>Lunch</td></tr>
-      <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">Data Cleaning with OpenRefine</a></td></tr>
 	<tr><td>15:00 - 15:30</td><td>Break</td></tr>
-      <tr><td>15:30 - 16:25</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr><td>15:30 - 16:25</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">Data Cleaning with OpenRefine</a></td></tr>
 	<tr><td>16:25 - 16:30</td><td>Wrap-up</td></tr>
     </table>
   </div>
