--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -16,26 +16,26 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>9:00 - 10:30</td><td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets - 1</a></td></tr>
+      <tr><td>9:00 - 10:30</td><td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets - part 1</a></td></tr>
       <tr><td>10:30 - 11:00</td><td>Break</td></tr>
-      <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets - 2</a></td></tr>
+      <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organisation in Spreadsheets - part 2</a></td></tr>
 	<tr><td>12:30 - 13:30</td><td>Lunch</td></tr>
-      <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">Data Cleaning with OpenRefine - 1</a></td></tr>
+      <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">Data Cleaning with OpenRefine - part 1</a></td></tr>
 	<tr><td>15:00 - 15:30</td><td>Break</td></tr>
-      <tr><td>15:30 - 16:25</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">Data Cleaning with OpenRefine - 2</a></td></tr>
+      <tr><td>15:30 - 16:25</td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">Data Cleaning with OpenRefine - part 2</a></td></tr>
 	<tr><td>16:25 - 16:30</td><td>Wrap-up</td></tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-	<tr><td>09:00 - 10:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">Data analysis and Visualisation in R - 1</a></td></tr>
+	<tr><td>09:00 - 10:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">Data analysis and Visualisation in R - part 1</a></td></tr>
       <tr><td>10:30 - 11:00</td><td>Break</td></tr>
-      <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">Data analysis and Visualisation in R - 2</a></td></tr>
+      <tr><td>11:00 - 12:30</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">Data analysis and Visualisation in R - part 2</a></td></tr>
 	<tr><td>12:30 - 13:30</td><td>Lunch</td></tr>
-      <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">Data analysis and Visualisation in R - 3</a></td></tr>
+      <tr><td>13:30 - 15:00</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">Data analysis and Visualisation in R - part 3</a></td></tr>
 	<tr><td>15:00 - 15:30</td><td>Break</td></tr>
-      <tr><td>15:30 - 16:15</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">Data analysis and Visualisation in R - 4</a></td></tr>
+      <tr><td>15:30 - 16:15</td><td><a href="https://datacarpentry.org/R-ecology-lesson/">Data analysis and Visualisation in R - part 4</a></td></tr>
 	<tr><td>16:15 - 16:25</td><td>Wrap-up</td></tr>
 	<tr><td>16:25 - 16:30</td><td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td></tr>
     </table>
