--- a/_includes/install_instructions/videoconferencing.html
+++ b/_includes/install_instructions/videoconferencing.html
@@ -1,5 +1,5 @@
 
-<h3 id="videoconferencing">Install the videoconferencing client</h3>
+<h3 id="videoconferencing">Install the Zoom video conferencing client</h3>
 
 {% comment %}
 Replace the paragraph below with the relevant installation instructions
