--- a/_includes/install_instructions/videoconferencing.html
+++ b/_includes/install_instructions/videoconferencing.html
@@ -16,21 +16,21 @@ if you do not use Zoom
 
 <p>
   Like other Carpentries workshops,
-  you will be learning by "coding along" with the Instructors.
+  you will be learning by "coding along" with the instructors.
   To do this, you will need to have both the window for the tool
-  you will be learning about (a terminal, RStudio, your web browser, etc..)
+  you will be learning about (a spreadsheet program, terminal, RStudio, a web browser, etc..)
   and the window for the Zoom video conference client open.
   In order to see both at once,
   we recommend using one of the following set up options:
   <ul>
     <li><strong>Two monitors:</strong> If you have two monitors,
-      plan to have your terminal up on one monitor and
+      plan to have your work following the instuctor on one monitor and
       the video conferencing software on the other.</li>
     <li><strong>Two devices:</strong> If you don't have two monitors,
       do you have another device (tablet, smartphone) with a medium to large
       sized screen? If so, try using the smaller device as your video
       conference connection and your larger device (laptop or desktop)
-      to follow along with Make commands.</li>
+      to follow along with what instructor is doing.</li>
     <li><strong>Divide your screen:</strong> If you only have one device
       and one screen, practice having two windows
       (the video conference program and one of the tools you will be using
