--- a/_includes/swc/syllabus.html
+++ b/_includes/swc/syllabus.html
@@ -8,7 +8,7 @@
       <li>Looping Over Files</li>
       <li>Creating and Running Shell Scripts</li>
       <li>Finding Things</li>
-      <li><a href="{{site.swc_pages}}/shell-novice/reference">Reference...</a></li>
+      <li><a href="{{site.swc_pages}}/shell-novice">Reference</a></li>
     </ul>
   </div>
   <div class="col-md-6">
@@ -21,7 +21,7 @@
       <li>Loops and Conditionals</li>
       <li>Defensive Programming</li>
       <li>Using Python from the Command Line</li>
-      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
+      <li><a href="{{site.swc_pages}}/python-novice-inflammation">Reference</a></li>
     </ul>
   </div>
   <!--
@@ -64,9 +64,10 @@
       <li>Resolving Conflicts</li>
       <li>Open Licenses</li>
       <li>Where to Host Work, and Why</li>
-      <li><a href="{{site.swc_pages}}/git-novice/reference">Reference...</a></li>
+      <li><a href="{{site.swc_pages}}/git-novice">Reference</a></li>
     </ul>
   </div>
+  <!--
   <div class="col-md-6">
     <h3 id="syllabus-sql">Managing Data with SQL</h3>
     <ul>
@@ -81,6 +82,7 @@
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference">Reference...</a></li>
     </ul>
   </div>
+-->
     <!--
   <div class="col-md-6">
     <h3 id="syllabus-r">Open Refine</h3>
