--- a/_includes/swc/syllabus.html
+++ b/_includes/swc/syllabus.html
@@ -2,26 +2,13 @@
   <div class="col-md-6">
     <h3 id="syllabus-shell">The Unix Shell</h3>
     <ul>
-      <li>Files and Directories</li>
-      <li>History and Tab Completion</li>
-      <li>Pipes and Redirection</li>
-      <li>Looping Over Files</li>
-      <li>Creating and Running Shell Scripts</li>
-      <li>Finding Things</li>
       <li><a href="{{site.swc_pages}}/shell-novice">Reference</a></li>
     </ul>
   </div>
   <div class="col-md-6">
     <h3 id="syllabus-python">Programming in Python</h3>
     <ul>
-      <li>Using Libraries</li>
-      <li>Working with Arrays</li>
-      <li>Reading and Plotting Data</li>
-      <li>Creating and Using Functions</li>
-      <li>Loops and Conditionals</li>
-      <li>Defensive Programming</li>
-      <li>Using Python from the Command Line</li>
-      <li><a href="{{site.swc_pages}}/python-novice-inflammation">Reference</a></li>
+      <li><a href="http://swcarpentry.github.io/python-novice-gapminder/">Reference</a></li>
     </ul>
   </div>
   <!--
@@ -56,14 +43,6 @@
   <div class="col-md-6">
     <h3 id="syllabus-git">Version Control with Git</h3>
     <ul>
-      <li>Creating a Repository</li>
-      <li>Recording Changes to Files: <code>add</code>, <code>commit</code>, ...</li>
-      <li>Viewing Changes: <code>status</code>, <code>diff</code>, ...</li>
-      <li>Ignoring Files</li>
-      <li>Working on the Web: <code>clone</code>, <code>pull</code>, <code>push</code>, ...</li>
-      <li>Resolving Conflicts</li>
-      <li>Open Licenses</li>
-      <li>Where to Host Work, and Why</li>
       <li><a href="{{site.swc_pages}}/git-novice">Reference</a></li>
     </ul>
   </div>
