--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,30 +3,28 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>09:00 - 10:30</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>10:30 - 11:00</td>  <td>Break</td> </tr>
+      <tr> <td>11:00 - 12:30</td>  <td>Automating Tasks with the Unix Shell (continued)</td> </tr>
+      <tr> <td>12:30 - 13:30</td>  <td>Lunch</td> </tr>
+      <tr> <td>13:30 - 15:00</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>15:00 - 15:30</td>  <td>Break</td> </tr>
+      <tr> <td>15:30 - 16:20</td>  <td>Building Programs with Python (continued)</td> </tr>
+      <tr> <td>16:20 - 16:30</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Managing Data with SQL (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr> <td>09:00 - 10:30</td>  <td>Building Programs with Python (continued)</td> </tr>
+      <tr> <td>10:30 - 11:00</td>  <td>Break</td> </tr>
+      <tr> <td>11:00 - 12:30</td>  <td>Building Programs with Python (continued)</td> </tr>
+      <tr> <td>12:30 - 13:30</td>  <td>Lunch</td> </tr>
+      <tr> <td>13:30 - 15:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>15:00 - 15:30</td>  <td>Break</td> </tr>
+      <tr> <td>15:30 - 16:15</td>  <td>Version Control with Git (continued)</td> </tr>
+      <tr> <td>16:15 - 16:25</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
+      <tr> <td>16:25 - 16:30</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
 </div>
