--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -23,7 +23,7 @@
       <tr> <td>13:30 - 15:00</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>15:00 - 15:30</td>  <td>Break</td> </tr>
       <tr> <td>15:30 - 16:15</td>  <td>Version Control with Git (continued)</td> </tr>
-      <tr> <td>16:15 - 16:25</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
+      <tr> <td>16:15 - 16:25</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td> </tr>
       <tr> <td>16:25 - 16:30</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
