--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,9 +3,9 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00 - 10:30</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>09:00 - 10:30</td>  <td><a href="https://swcarpentry.github.io/shell-novice" target="_blank">Automating Tasks with the Unix Shell</a></td> </tr>
       <tr> <td>10:30 - 11:00</td>  <td>Break</td> </tr>
-      <tr> <td>11:00 - 12:30</td>  <td>Automating Tasks with the Unix Shell (continued)</td> </tr>
+      <tr> <td>11:00 - 12:30</td>  <td><a href="https://swcarpentry.github.io/shell-novice" target="_blank">Automating Tasks with the Unix Shell</a> (continued)</td> </tr>
       <tr> <td>12:30 - 13:30</td>  <td>Lunch</td> </tr>
       <tr> <td>13:30 - 15:00</td>  <td>Building Programs with Python</td> </tr>
       <tr> <td>15:00 - 15:30</td>  <td>Break</td> </tr>
