--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -20,9 +20,9 @@
       <tr> <td>10:30 - 11:00</td>  <td>Break</td> </tr>
       <tr> <td>11:00 - 12:30</td>  <td>Building Programs with Python (continued)</td> </tr>
       <tr> <td>12:30 - 13:30</td>  <td>Lunch</td> </tr>
-      <tr> <td>13:30 - 15:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>13:30 - 15:00</td>  <td><a href="https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a></td> </tr>
       <tr> <td>15:00 - 15:30</td>  <td>Break</td> </tr>
-      <tr> <td>15:30 - 16:15</td>  <td>Version Control with Git (continued)</td> </tr>
+      <tr> <td>15:30 - 16:15</td>  <td><a href="https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a> (continued)</td> </tr>
       <tr> <td>16:15 - 16:25</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td> </tr>
       <tr> <td>16:25 - 16:30</td>  <td>Wrap-up</td> </tr>
     </table>
