--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -7,18 +7,18 @@
       <tr> <td>10:30 - 11:00</td>  <td>Break</td> </tr>
       <tr> <td>11:00 - 12:30</td>  <td><a href="https://swcarpentry.github.io/shell-novice" target="_blank">Automating Tasks with the Unix Shell</a> (continued)</td> </tr>
       <tr> <td>12:30 - 13:30</td>  <td>Lunch</td> </tr>
-      <tr> <td>13:30 - 15:00</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>13:30 - 15:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a></td> </tr>
       <tr> <td>15:00 - 15:30</td>  <td>Break</td> </tr>
-      <tr> <td>15:30 - 16:20</td>  <td>Building Programs with Python (continued)</td> </tr>
+      <tr> <td>15:30 - 16:20</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a> (continued)</td> </tr>
       <tr> <td>16:20 - 16:30</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00 - 10:30</td>  <td>Building Programs with Python (continued)</td> </tr>
+      <tr> <td>09:00 - 10:30</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a> (continued)</td> </tr>
       <tr> <td>10:30 - 11:00</td>  <td>Break</td> </tr>
-      <tr> <td>11:00 - 12:30</td>  <td>Building Programs with Python (continued)</td> </tr>
+      <tr> <td>11:00 - 12:30</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a> (continued)</td> </tr>
       <tr> <td>12:30 - 13:30</td>  <td>Lunch</td> </tr>
       <tr> <td>13:30 - 15:00</td>  <td><a href="https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a></td> </tr>
       <tr> <td>15:00 - 15:30</td>  <td>Break</td> </tr>
