--- a/_includes/install_instructions/videoconferencing.html
+++ b/_includes/install_instructions/videoconferencing.html
@@ -18,7 +18,7 @@ if you do not use Zoom
   Like other Carpentries workshops,
   you will be learning by "coding along" with the instructors.
   To do this, you will need to have both the window for the tool
-  you will be learning about (a spreadsheet program, terminal, RStudio, a web browser, etc.)
+  you will be learning about (a spreadsheet program, a terminal, RStudio, a web browser, etc.)
   and the window for the Zoom video conference client open.
   In order to see both at once,
   we recommend using one of the following set up options:
