Config and schedule changes

--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,30 +1,62 @@
 <div class="row">
-  <div class="col-md-6">
+<!--  <div style="padding-left: 15px;">Before the workshop: please fill in the <a href="{{ site.pre_survey }}{{ site.github.project_title }}">pre-workshop survey</a></div>-->
+  <div class="col-md-4">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00 - 10:30</td>  <td><a href="https://swcarpentry.github.io/shell-novice" target="_blank">Automating Tasks with the Unix Shell</a></td> </tr>
-      <tr> <td>10:30 - 11:00</td>  <td>Break</td> </tr>
-      <tr> <td>11:00 - 12:30</td>  <td><a href="https://swcarpentry.github.io/shell-novice" target="_blank">Automating Tasks with the Unix Shell</a> (continued)</td> </tr>
-      <tr> <td>12:30 - 13:30</td>  <td>Lunch</td> </tr>
-      <tr> <td>13:30 - 15:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a></td> </tr>
-      <tr> <td>15:00 - 15:30</td>  <td>Break</td> </tr>
-      <tr> <td>15:30 - 16:20</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a> (continued)</td> </tr>
-      <tr> <td>16:20 - 16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>09:00 - 10:15</td>  <td><a href="https://swcarpentry.github.io/shell-novice" target="_blank">Automating Tasks with shell</a></td> </tr>
+      <tr> <td>10:15 - 10:30</td>  <td>Break</td> </tr>
+      <tr> <td>10:30 - 11:30</td>  <td><a href="https://swcarpentry.github.io/shell-novice" target="_blank">Automating Tasks with shell</a></td> </tr>
+      <tr> <td>11:30 - 11:45</td>  <td>Break</td> </tr>
+      <tr> <td>11:45 - 12:45</td>  <td><a href="https://swcarpentry.github.io/shell-novice" target="_blank">Automating Tasks with shell</a></td> </tr>
+      <tr> <td>12:45 - 13:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-4">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00 - 10:30</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a> (continued)</td> </tr>
-      <tr> <td>10:30 - 11:00</td>  <td>Break</td> </tr>
-      <tr> <td>11:00 - 12:30</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a> (continued)</td> </tr>
-      <tr> <td>12:30 - 13:30</td>  <td>Lunch</td> </tr>
-      <tr> <td>13:30 - 15:00</td>  <td><a href="https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a></td> </tr>
-      <tr> <td>15:00 - 15:30</td>  <td>Break</td> </tr>
-      <tr> <td>15:30 - 16:15</td>  <td><a href="https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a> (continued)</td> </tr>
-      <tr> <td>16:15 - 16:25</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td> </tr>
-      <tr> <td>16:25 - 16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>09:00 - 10:15</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a></td> </tr>
+      <tr> <td>10:15 - 10:30</td>  <td>Break</td> </tr>
+      <tr> <td>10:30 - 11:30</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a></td> </tr>
+      <tr> <td>11:30 - 11:45</td>  <td>Break</td> </tr>
+      <tr> <td>11:45 - 12:45</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a></td> </tr>
+      <tr> <td>12:45 - 13:00</td>  <td>Wrap-up</td> </tr>
     </table>
+  </div>
+  <div class="col-md-4">
+    <h3>Day 3</h3>
+    <table class="table table-striped">
+      <tr> <td>09:00 - 10:15</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a></td> </tr>
+      <tr> <td>10:15 - 10:30</td>  <td>Break</td> </tr>
+      <tr> <td>10:30 - 11:30</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a></td> </tr>
+      <tr> <td>11:30 - 11:45</td>  <td>Break</td> </tr>
+      <tr> <td>11:45 - 12:45</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a></td> </tr>
+      <tr> <td>12:45 - 13:00</td>  <td>Wrap-up</td> </tr>
+    </table>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Day 4</h3>
+    <table class="table table-striped">
+      <tr> <td>09:00 - 10:15</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a></td> </tr>
+      <tr> <td>10:15 - 10:30</td>  <td>Break</td> </tr>
+      <tr> <td>10:30 - 11:30</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/" target="_blank">Building Programs with Python</a></td> </tr>
+      <tr> <td>11:30 - 11:45</td>  <td>Break</td> </tr>
+      <tr> <td>11:45 - 12:45</td>  <td><a href="https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a></td> </tr>
+      <tr> <td>12:45 - 13:00</td>  <td>Wrap-up</td> </tr>
+    </table>
+  </div>
+  <div class="col-md-4">
+      <h3>Day 5</h3>
+      <table class="table table-striped">
+        <tr> <td>09:00 - 10:15</td>  <td><a href="https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a></td> </tr>
+        <tr> <td>10:15 - 10:30</td>  <td>Break</td> </tr>
+        <tr> <td>10:30 - 11:30</td>  <td><a href="https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a></td> </tr>
+        <tr> <td>11:30 - 11:45</td>  <td>Break</td> </tr>
+        <tr> <td>11:45 - 12:45</td>  <td><a href="https://swcarpentry.github.io/git-novice" target="_blank">Version Control with Git</a></td> </tr>
+        <tr> <td>12:45 - 13:00</td>  <td>Wrap-up</td> </tr>
+      </table>
+  </div>
+  <div class="col-md-4">
   </div>
 </div>
