--- a/_includes/install_instructions/videoconferencing.html
+++ b/_includes/install_instructions/videoconferencing.html
@@ -11,34 +11,41 @@ if you do not use Zoom
   to download and install the Zoom client for your computer.
 </p>
 
-
-<h3>Set up your workspace</h3>
-
 <p>
-  Like other Carpentries workshops,
-  you will be learning by "coding along" with the instructors.
-  To do this, you will need to have both the window for the tool
-  you will be learning about (a spreadsheet program, a terminal, RStudio, a web browser, etc.)
-  and the window for the Zoom video conference client open.
-  In order to see both at once,
-  we recommend using one of the following set up options:
-  <ul>
-    <li><strong>Two monitors:</strong> If you have two monitors,
-      plan to have your work following the instuctor on one monitor and
-      the video conferencing software on the other.</li>
-    <li><strong>Two devices:</strong> If you don't have two monitors,
-      do you have another device (tablet, smartphone) with a medium to large
-      sized screen? If so, try using the smaller device as your video
-      conference connection and your larger device (laptop or desktop)
-      to follow along with what instructor is doing.</li>
-    <li><strong>Divide your screen:</strong> If you only have one device
-      and one screen, practice having two windows
-      (the video conference program and one of the tools you will be using
-      at the workshop) open together.
-      How can you best fit both on your screen?
-      Will it work better for you to toggle between them
-      using a keyboard shortcut?
-      Try it out in advance to decide what will work best for you.</li>
-  </ul>
-This <a href="https://carpentries.org/blog/2020/06/online-workshop-logistics-and_screen-layouts/" target="_blank">blog post</a> includes detailed information on how to set up your screen to follow along during the workshop.
+  As we will be sharing links and pieces of code during the workshop, and you may need to share your screen in the case
+  of any issues, we recommend to connect to the Zoom call from the same machine that you will be using to code along.
+  This may have an impact on your screen estate as will have to divide your screen between the Zoom window and
+  another window where you code or to switch between them but is the recommended setup.
 </p>
+
+
+<!--<h3>Set up your workspace</h3>-->
+
+<!--<p>-->
+<!--  Like other Carpentries workshops,-->
+<!--  you will be learning by "coding along" with the instructors.-->
+<!--  To do this, you will need to have both the window for the tool-->
+<!--  you will be learning about (a spreadsheet program, a terminal, RStudio, a web browser, etc.)-->
+<!--  and the window for the Zoom video conference client open.-->
+<!--  In order to see both at once,-->
+<!--  we recommend using one of the following set up options:-->
+<!--  <ul>-->
+<!--    <li><strong>Two monitors:</strong> If you have two monitors,-->
+<!--      plan to have your work following the instuctor on one monitor and-->
+<!--      the video conferencing software on the other.</li>-->
+<!--    <li><strong>Two devices:</strong> If you don't have two monitors,-->
+<!--      do you have another device (tablet, smartphone) with a medium to large-->
+<!--      sized screen? If so, try using the smaller device as your video-->
+<!--      conference connection and your larger device (laptop or desktop)-->
+<!--      to follow along with what instructor is doing.</li>-->
+<!--    <li><strong>Divide your screen:</strong> If you only have one device-->
+<!--      and one screen, practice having two windows-->
+<!--      (the video conference program and one of the tools you will be using-->
+<!--      at the workshop) open together.-->
+<!--      How can you best fit both on your screen?-->
+<!--      Will it work better for you to toggle between them-->
+<!--      using a keyboard shortcut?-->
+<!--      Try it out in advance to decide what will work best for you.</li>-->
+<!--  </ul>-->
+<!--This <a href="https://carpentries.org/blog/2020/06/online-workshop-logistics-and_screen-layouts/" target="_blank">blog post</a> includes detailed information on how to set up your screen to follow along during the workshop.-->
+<!--</p>-->
