--- a/_includes/incubator/schedule.html
+++ b/_includes/incubator/schedule.html
@@ -27,7 +27,7 @@
       <tr> <td>13:45 - 14:00 UTC</td>  <td>Break</td> </tr>
       <tr> <td>14:00 - 15:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/arrays/index.html" target="_blank">Loops and Collections</a></td> </tr>
       <tr> <td>15:00 - 15:15 UTC</td>  <td>Break</td> </tr>
-      <tr> <td>15:15 - 16:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/" target="_blank">A Look at Real-life Websites</a></td> </tr>
+      <tr> <td>15:15 - 16:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/" target="_blank">A Glance at Real-Life Websites</a></td> </tr>
     </table>
   </div>
 </div>
