--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -11,13 +11,13 @@
 {% assign online = "false" %}
 {% endif %}
 
-<div class="jumbotron">
+<div class="jumbotron" class="padding: 10px 0px;">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       {% unless site.title == "Workshop Title" or site.title == "" %}
-      <h2>{{site.title}}</h1>
+      <h2>{{site.title}}</h2>
       {% endunless %}
-      <h2>{{page.venue}}</h2>
+      <h3>{{page.venue}}</h3>
       <div class="row">
         <div class="col-md-6">
           {% if online == "true_public" %}
