Move Starting Jekyll to day 1

--- a/_includes/incubator/schedule.html
+++ b/_includes/incubator/schedule.html
@@ -3,21 +3,22 @@
   <div class="col-md-4">
     <h3>Day 1, 9 March 2021</h3>
     <table class="table table-striped">
-      <tr> <td>13:00 - 13:45 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/introduction/index.html" target="_blank">Intro</a></td> </tr>
-      <tr> <td>13:45 - 14:00 UTC</td>  <td>Break</td> </tr>
-      <tr> <td>14:00 - 15:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/markdown/index.html" target="_blank">Authoring with Markdown</a></td> </tr>
+      <tr> <td>13:00 - 13:40 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/introduction/index.html" target="_blank">Intro</a></td> </tr>
+      <tr> <td>13:40 - 14:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/markdown/index.html" target="_blank">Authoring with Markdown</a></td> </tr>
+      <tr> <td>14:00 - 14:15 UTC</td>  <td>Break</td> </tr>
+      <tr> <td>14:15 - 15:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/github-pages/index.html" target="_blank">Hosting Websites on GitHub</a></td> </tr>
       <tr> <td>15:00 - 15:15 UTC</td>  <td>Break</td> </tr>
-      <tr> <td>15:15 - 16:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/github-pages/index.html" target="_blank">Hosting Websites on GitHub</a></td> </tr>
+      <tr> <td>15:15 - 16:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/starting-jekyll/index.html" target="_blank">Starting with Jekyll</a></td> </tr>
     </table>
   </div>
   <div class="col-md-4">
     <h3>Day 2, 10 March 2021</h3>
     <table class="table table-striped">
-      <tr> <td>13:00 - 13:45 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/starting-jekyll/index.html" target="_blank">Starting with Jekyll</a></td> </tr>
-      <tr> <td>13:45 - 14:00 UTC</td>  <td>Break</td> </tr>
-      <tr> <td>14:00 - 15:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/includes/index.html" target="_blank">Re-using Blocks of Content</a></td> </tr>
+      <tr> <td>13:00 - 14:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/includes/index.html" target="_blank">Re-using Blocks of Content</a></td> </tr>
+      <tr> <td>14:00 - 14:15 UTC</td>  <td>Break</td> </tr>
+      <tr> <td>14:15 - 15:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/layouts/index.html" target="_blank">Page Layouts</a></td> </tr>
       <tr> <td>15:00 - 15:15 UTC</td>  <td>Break</td> </tr>
-      <tr> <td>15:15 - 16:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/layouts/index.html" target="_blank">Page Layouts</a></td> </tr>
+      <tr> <td>15:15 - 16:00 UTC</td>  <td><a href="https://carpentries-incubator.github.io/jekyll-pages-novice/layouts/index.html" target="_blank">Page Layouts (cont.)</a></td> </tr>
     </table>
   </div>
   <div class="col-md-4">
